--- a/my-grading-app/package.json
+++ b/my-grading-app/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "ffmpeg-static": "^5.3.0",
+    "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.5",
     "multer": "^2.0.2",
     "openai": "^6.15.0"
